--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <br>
 
-            <div class="author"> 作成者: <a href="https://twitter.com/yoshi_b_o_c">@yoshi_b_o_c</a></div>
+            <div class="author"> 作者: <a href="https://twitter.com/yoshi_b_o_c">@yoshi_b_o_c</a></div>
         </div>
     </div>
     <!-- <link rel="stylesheet" href="style.css"> -->
