--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3" selected>3</option>
-                <option value="4">4</option>
+                <!-- <option value="4">4</option> -->
                 <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
+                <!-- <option value="6">6</option>
+                <option value="7">7</option> -->
                 <option value="8">8</option>
-                <option value="9">9</option>
+                <!-- <option value="9">9</option> -->
                 <option value="10">10</option>
             </select><br><br>
 
@@ -45,7 +45,7 @@
             <br>
             <p id="titleText"></p>
             <!-- <button onclick="shareOnTwitter()">Twitterでシェア</button> -->
-            <button id="twitterShareBtn" href="#" onclick="shareOnTwitter()">Twitterでシェアする</button>
+            <button class="Twitter" id="twitterShareBtn" href="#" onclick="shareOnTwitter()">Twitterでシェアする</button>
 
             <br>
 
