乱数のバグ修正

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <div class="container">
         <h1>BUMP歌詞ガチャ</h1>
-        <h5>毎日結果が変わります。その日のお守りとしてリュックに詰めていってください</h5><br>
+        <h5>毎日結果が変わります。その日のお守りとしてリュックに詰めていってください<br>※「引き直す」ボタンのみ結果がランダムに変わります
+        </h5><br>
         <form id="gachaForm">
             <label for="nameInput">名前を入力してください</label>
             <br>
